--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
         // initialize kaboom context
         kaboom();
-
+        loadSprite("player", "player.png")
+        loadSprite("Button1", "Level1Buton.png")
 
         // add something to screen
         var lo = 0 
